# Community-Mod-Compilation-Deprecated

./: .editorconfig  .flake8  .gitignore  .travis.yml  .typo-ci.yml  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  DISCLAIMER.txt  LICENSE  Makefile  README.md  Read me.md  Read me.txt  The Goat Gods Mod Compilation v0.0.2.rar  The Goat Gods Mod Compilation v0.0.3.rar  The Goat Gods Mod Compilation v0.0.5.rar  ToDo-fonts.txt  Updating Legacy JSON.md  json_blacklist  pull_request_template.md  style-json.ps1
.github/: .travis.yml  ACTION.yml  FUNDING.yml  pull_request_template.md
2ch_soundpack/: effects.json  environments.json
5 Doc/: legacy update code.rtf
All the no mods/: How to install.txt
CCSoundpack/: README.md  sndchainsaw.json  snddanger.json  sndfootsteps.json  sndguns.json  sndmenu.json  soundpack.txt
ChestHole/: soundpack.txt
ChestHoleCC/: soundpack.txt  soundset.json
DarkerRetroDaysTileset/: tileset.txt
Documents/: Cataclysm_ DDA Web JSON Linting Tool.html  Code Doc.rtf  Gun Mods - install times.md  Gun_Mods_install_times.md  Installation guide.md  Installation_guide.md  Learning Code.md  Learning_Code.md  New Rich Text Document.md  Override a variable.md  Override_a_variable.md  Relic_data.md  Updating Legacy JSON.md  Updating_Legacy_JSON.md  code removal.rtf  gun_mods install times.txt  legacy update code.rtf  readme.rtf
MX_tileset_for_cosmetics_p12/: tileset.txt
Otopack/: furniture_effects.json  melee.json  monsters.json  player.json  preload.json  terrain_effects.json
RRFSounds/: soundset.json
Removed/: Readme 49mm fix.txt  Readme.txt  mods that need color update.txt
Tools/: Item viewer.url  barrellength_volume.py  base_script.py  cdda_utility_log.txt  covers_update.py  material_ammo_update.py  name.py  name_strings_to_objects.py  pl_script.py  price_to_string.py  recipe extractor and editor.py  recipe_extractor_and_editor.py  run_vehicle_reformatter.py  time_to_string.py  (+2 more)
(+14029 files in other folders)
