# Cataclysm data files
cmake_minimum_required(VERSION 3.1.4)

SET(CATACLYSM_DATA_DIRS
    ${CMAKE_SOURCE_DIR}/data
)

IF(SOUND)
    SET(CATACLYSM_DATA_DIRS
      ${CATACLYSM_DATA_DIRS}
      ${CMAKE_SOURCE_DIR}/data/sound
    )
ENDIF(SOUND)

IF(TILES)
    SET(CATACLYSM_DATA_DIRS
      ${CATACLYSM_DATA_DIRS}
      ${CMAKE_SOURCE_DIR}/gfx
    )
ENDIF(TILES)

IF(RELEASE)
    install(DIRECTORY ${CATACLYSM_DATA_DIRS} DESTINATION ${DATA_PREFIX})
    install(FILES ${CATACLYSM_DATA_FILES} DESTINATION ${DATA_PREFIX})
ENDIF(RELEASE)

